add clear button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <button id="add_button">
     Add
   </button>
+  <button id="clear_button">
+    Clear Done
+  </button>
   <p id="todo-count">
     TODOs remaining
   </p>
